Workaround to fix the problem of tables titles going behind the top bar, the dialogs are not restricted to the main-body anymore.

--- a/apps/dderl/priv/static/styles/dderl.css
+++ b/apps/dderl/priv/static/styles/dderl.css
@@ -106,7 +106,7 @@ button.menubutton
 
 .menubar {
     background:#AFAFAF;
-    z-index:99999;
+    /*z-index:99999;*/
 }
 
 /* 
